--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
 command = "ng build"
 functions = "netlify/functions"
-publish = "dist/angular-ssr/browser"
+publish = "dist/simui/browser"
