--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,7 @@
 			"projectType": "application",
 			"schematics": {
 				"@schematics/angular:component": {
-					"style": "css"
+					"style": "scss"
 				}
 			},
 			"root": "",
@@ -22,7 +22,7 @@
 						"browser": "src/main.ts",
 						"polyfills": ["zone.js"],
 						"tsConfig": "tsconfig.app.json",
-						"inlineStyleLanguage": "css",
+						"inlineStyleLanguage": "scss",
 						"assets": [
 							{
 								"glob": "**/*",
@@ -34,7 +34,7 @@
 								"output": "assets"
 							}
 						],
-						"styles": ["src/styles.css"],
+						"styles": ["src/styles.scss"],
 						"scripts": [],
 						"server": "src/main.server.ts",
 						"prerender": true,
@@ -86,14 +86,14 @@
 					"options": {
 						"polyfills": ["zone.js", "zone.js/testing"],
 						"tsConfig": "tsconfig.spec.json",
-						"inlineStyleLanguage": "css",
+						"inlineStyleLanguage": "scss",
 						"assets": [
 							{
 								"glob": "**/*",
 								"input": "public"
 							}
 						],
-						"styles": ["src/styles.css"],
+						"styles": ["src/styles.scss"],
 						"scripts": []
 					}
 				},
