--- a/angular.json
+++ b/angular.json
@@ -44,6 +44,11 @@
 					},
 					"configurations": {
 						"production": {
+							"optimization": {
+								"styles": {
+									"inlineCritical": false
+								}
+							},
 							"budgets": [
 								{
 									"type": "initial",
