--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "watch": "ng build --watch --configuration development"
   },
   "dependencies": {
-    "@angular/cdk": ">=19.0.0",
+    "@angular/cdk": "19.2.2",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
