--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,7 +42,9 @@
 			"@spartan-ng/ui-radiogroup-helm": ["./src/libs/ui/ui-radiogroup-helm/src/index.ts"],
 			"@spartan-ng/ui-inputotp-helm": ["./src/libs/ui/ui-inputotp-helm/src/index.ts"],
 			"@spartan-ng/ui-switch-helm": ["./src/libs/ui/ui-switch-helm/src/index.ts"],
-			"@spartan-ng/ui-table-helm": ["./src/libs/ui/ui-table-helm/src/index.ts"]
+			"@spartan-ng/ui-table-helm": ["./src/libs/ui/ui-table-helm/src/index.ts"],
+			"@spartan-ng/ui-card-helm": ["./src/libs/ui/ui-card-helm/src/index.ts"],
+			"@spartan-ng/ui-slider-helm": ["./src/libs/ui/ui-slider-helm/src/index.ts"]
 		}
 	},
 	"angularCompilerOptions": {
