--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tailwindcss/postcss": "^4.0.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "express": "^4.18.2",
     "marked": "5.1.2",
     "marked-gfm-heading-id": "3.2.0",
