--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
 		"@angular-devkit/build-angular": "^19.2.0",
 		"@angular/cli": "^19.2.0",
 		"@angular/compiler-cli": "^19.2.0",
-		"@spartan-ng/cli": "^0.0.1-alpha.469",
+		"@spartan-ng/cli": "0.0.1-alpha.469",
 		"@types/express": "^4.17.17",
 		"@types/jasmine": "~5.1.0",
 		"@types/marked": "5.0.2",
