fix: breaking change

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,6 @@
 			"@spartan-ng/helm/accordion": ["./src/libs/ui/ui-accordion-helm/src/index.ts"],
 			"@spartan-ng/helm/alert": ["./src/libs/ui/ui-alert-helm/src/index.ts"],
 			"@spartan-ng/helm/aspect-ratio": ["./src/libs/ui/ui-aspectratio-helm/src/index.ts"],
-			"@spartan-ng/helm/avatar": ["./src/libs/ui/ui-avatar-helm/src/index.ts"],
 			"@spartan-ng/helm/badge": ["./src/libs/ui/ui-badge-helm/src/index.ts"],
 			"@spartan-ng/helm/breadcrumb": ["./src/libs/ui/ui-breadcrumb-helm/src/index.ts"],
 			"@spartan-ng/helm/button": ["./src/libs/ui/ui-button-helm/src/index.ts"],
@@ -44,11 +43,12 @@
 			"@spartan-ng/helm/slider": ["./src/libs/ui/ui-slider-helm/src/index.ts"],
 			"@spartan-ng/helm/spinner": ["./src/libs/ui/ui-spinner-helm/src/index.ts"],
 			"@spartan-ng/helm/switch": ["./src/libs/ui/ui-switch-helm/src/index.ts"],
-			"@spartan-ng/helm/table": ["./src/libs/ui/ui-table-helm/src/index.ts"],
-			"@spartan-ng/helm/tabs": ["./src/libs/ui/ui-tabs-helm/src/index.ts"],
 			"@spartan-ng/helm/toggle": ["./src/libs/ui/ui-toggle-helm/src/index.ts"],
 			"@spartan-ng/helm/toggle-group": ["./src/libs/ui/ui-togglegroup-helm/src/index.ts"],
-			"@spartan-ng/helm/tooltip": ["./src/libs/ui/ui-tooltip-helm/src/index.ts"]
+			"@spartan-ng/helm/tooltip": ["./src/libs/ui/ui-tooltip-helm/src/index.ts"],
+			"@spartan-ng/helm/avatar": ["./src/libs/ui/ui-avatar-helm/src/index.ts"],
+			"@spartan-ng/helm/table": ["./src/libs/ui/ui-table-helm/src/index.ts"],
+			"@spartan-ng/helm/tabs": ["./src/libs/ui/ui-tabs-helm/src/index.ts"]
 		}
 	},
 	"angularCompilerOptions": {
