--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,9 +21,7 @@
 			"@spartan-ng/helm/accordion": ["./src/libs/ui/ui-accordion-helm/src/index.ts"],
 			"@spartan-ng/helm/alert": ["./src/libs/ui/ui-alert-helm/src/index.ts"],
 			"@spartan-ng/helm/aspect-ratio": ["./src/libs/ui/ui-aspectratio-helm/src/index.ts"],
-			"@spartan-ng/helm/badge": ["./src/libs/ui/ui-badge-helm/src/index.ts"],
 			"@spartan-ng/helm/breadcrumb": ["./src/libs/ui/ui-breadcrumb-helm/src/index.ts"],
-			"@spartan-ng/helm/button": ["./src/libs/ui/ui-button-helm/src/index.ts"],
 			"@spartan-ng/helm/calendar": ["./src/libs/ui/ui-calendar-helm/src/index.ts"],
 			"@spartan-ng/helm/card": ["./src/libs/ui/ui-card-helm/src/index.ts"],
 			"@spartan-ng/helm/checkbox": ["./src/libs/ui/ui-checkbox-helm/src/index.ts"],
@@ -38,7 +36,6 @@
 			"@spartan-ng/helm/popover": ["./src/libs/ui/ui-popover-helm/src/index.ts"],
 			"@spartan-ng/helm/progress": ["./src/libs/ui/ui-progress-helm/src/index.ts"],
 			"@spartan-ng/helm/radio-group": ["./src/libs/ui/ui-radiogroup-helm/src/index.ts"],
-			"@spartan-ng/helm/scroll-area": ["./src/libs/ui/ui-scrollarea-helm/src/index.ts"],
 			"@spartan-ng/helm/select": ["./src/libs/ui/ui-select-helm/src/index.ts"],
 			"@spartan-ng/helm/slider": ["./src/libs/ui/ui-slider-helm/src/index.ts"],
 			"@spartan-ng/helm/spinner": ["./src/libs/ui/ui-spinner-helm/src/index.ts"],
@@ -48,7 +45,10 @@
 			"@spartan-ng/helm/tooltip": ["./src/libs/ui/ui-tooltip-helm/src/index.ts"],
 			"@spartan-ng/helm/avatar": ["./src/libs/ui/ui-avatar-helm/src/index.ts"],
 			"@spartan-ng/helm/table": ["./src/libs/ui/ui-table-helm/src/index.ts"],
-			"@spartan-ng/helm/tabs": ["./src/libs/ui/ui-tabs-helm/src/index.ts"]
+			"@spartan-ng/helm/button": ["./src/libs/ui/ui-button-helm/src/index.ts"],
+			"@spartan-ng/helm/badge": ["./src/libs/ui/ui-badge-helm/src/index.ts"],
+			"@spartan-ng/helm/tabs": ["./src/libs/ui/ui-tabs-helm/src/index.ts"],
+			"@spartan-ng/helm/scroll-area": ["./src/libs/ui/ui-scroll-area-helm/src/index.ts"]
 		}
 	},
 	"angularCompilerOptions": {
