--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
 		"@angular/ssr": "^19.2.0",
 		"@maskito/angular": "^3.7.2",
 		"@maskito/core": "^3.7.2",
+		"@maskito/kit": "^3.10.3",
 		"@netlify/angular-runtime": "^2.3.1",
 		"@ng-icons/core": "29.10.0",
 		"@ng-icons/lucide": "30.3.0",
 		"@ng-icons/remixicon": "^32.0.0",
-		"@spartan-ng/brain": "0.0.1-alpha.501",
+		"@spartan-ng/brain": "0.0.1-alpha.511",
 		"@tailwindcss/postcss": "^4.0.17",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
@@ -52,7 +53,7 @@
 		"@angular-devkit/build-angular": "^19.2.0",
 		"@angular/cli": "^19.2.0",
 		"@angular/compiler-cli": "^19.2.0",
-		"@spartan-ng/cli": "0.0.1-alpha.501",
+		"@spartan-ng/cli": "0.0.1-alpha.511",
 		"@types/express": "^4.17.17",
 		"@types/jasmine": "~5.1.0",
 		"@types/marked": "5.0.2",
