--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
 	},
 	"dependencies": {
 		"@angular/cdk": "19.2.2",
-		"@angular/common": "^19.2.0",
-		"@angular/compiler": "^19.2.0",
-		"@angular/core": "^19.2.0",
-		"@angular/forms": "^19.2.0",
-		"@angular/platform-browser": "^19.2.0",
-		"@angular/platform-browser-dynamic": "^19.2.0",
-		"@angular/platform-server": "^19.2.0",
-		"@angular/router": "^19.2.0",
-		"@angular/ssr": "^19.2.0",
+		"@angular/common": "19.2.0",
+		"@angular/compiler": "19.2.0",
+		"@angular/core": "19.2.0",
+		"@angular/forms": "19.2.0",
+		"@angular/platform-browser": "19.2.0",
+		"@angular/platform-browser-dynamic": "19.2.0",
+		"@angular/platform-server": "19.2.0",
+		"@angular/router": "19.2.0",
+		"@angular/ssr": "19.2.0",
 		"@maskito/angular": "^3.7.2",
 		"@maskito/core": "^3.7.2",
 		"@maskito/kit": "^3.10.3",
@@ -50,9 +50,9 @@
 		"zone.js": "~0.15.0"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^19.2.0",
-		"@angular/cli": "^19.2.0",
-		"@angular/compiler-cli": "^19.2.0",
+		"@angular-devkit/build-angular": "19.2.0",
+		"@angular/cli": "19.2.0",
+		"@angular/compiler-cli": "19.2.0",
 		"@spartan-ng/cli": "0.0.1-alpha.511",
 		"@types/express": "^4.17.17",
 		"@types/jasmine": "~5.1.0",
