--- a/package.json
+++ b/package.json
@@ -13,24 +13,24 @@
 		"watch": "ng build --watch --configuration development"
 	},
 	"dependencies": {
-		"@angular/cdk": "19.2.2",
-		"@angular/common": "19.2.0",
-		"@angular/compiler": "19.2.0",
-		"@angular/core": "19.2.0",
-		"@angular/forms": "19.2.0",
-		"@angular/platform-browser": "19.2.0",
-		"@angular/platform-browser-dynamic": "19.2.0",
-		"@angular/platform-server": "19.2.0",
-		"@angular/router": "19.2.0",
-		"@angular/ssr": "19.2.0",
+		"@angular/cdk": "20.0.6",
+		"@angular/common": "20.0.7",
+		"@angular/compiler": "20.0.7",
+		"@angular/core": "20.0.7",
+		"@angular/forms": "20.0.7",
+		"@angular/platform-browser": "20.0.7",
+		"@angular/platform-browser-dynamic": "20.0.7",
+		"@angular/platform-server": "20.0.7",
+		"@angular/router": "20.0.7",
+		"@angular/ssr": "20.0.6",
 		"@maskito/angular": "^3.7.2",
 		"@maskito/core": "^3.7.2",
 		"@maskito/kit": "^3.10.3",
 		"@netlify/angular-runtime": "^2.3.1",
 		"@ng-icons/core": "^32.2.0",
-		"@ng-icons/lucide": "30.3.0",
+		"@ng-icons/lucide": "^32.0.0",
 		"@ng-icons/remixicon": "^32.0.0",
-		"@spartan-ng/brain": "0.0.1-alpha.536",
+		"@spartan-ng/brain": "0.0.1-alpha.566",
 		"@tailwindcss/postcss": "^4.0.17",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
@@ -50,10 +50,10 @@
 		"zone.js": "~0.15.0"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "19.2.0",
-		"@angular/cli": "19.2.0",
-		"@angular/compiler-cli": "19.2.0",
-		"@spartan-ng/cli": "0.0.1-alpha.536",
+		"@angular-devkit/build-angular": "20.0.6",
+		"@angular/cli": "20.0.6",
+		"@angular/compiler-cli": "20.0.6",
+		"@spartan-ng/cli": "0.0.1-alpha.566",
 		"@types/express": "^4.17.17",
 		"@types/jasmine": "~5.1.0",
 		"@types/marked": "5.0.2",
@@ -75,7 +75,7 @@
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss-animate": "^1.0.6",
 		"tw-animate-css": "^1.4.0",
-		"typescript": "~5.7.2",
+		"typescript": "~5.8.3",
 		"typescript-eslint": "8.27.0"
 	}
 }
