feat(theme-editor): add theme selector and code view components

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "culori",
         "maskito",
         "oklch",
-        "postprocessors"
+        "postprocessors",
+        "simui"
     ]
 }
